# xuml-populate

./: .bumpversion.cfg  .gitignore  CLAUDE.md  README.md  pyproject.toml
PyRAL/: database.py  database_old.py  log.conf  pyral_exceptions.py  relation.py  relvar.py  rtypes.py  schema.py  session.py  test.py  transaction.py
PyRAL/deprecated/: relvar.py
PyRAL/tcl_scripts/: init_TclRAL.tcl
class_model_dsl/: __main__.py  log.conf  methodp_exceptions.py  mp_exceptions.py  op_exceptions.py  sp_exceptions.py
class_model_dsl/database/: relvars.py  sm_meta.db  sm_meta_db.py  sm_metamodel.py
class_model_dsl/exceptions/: action_exceptions.py
class_model_dsl/grammar/: class-model.peg  class_model.peg  method.peg  operation.peg  scrall.peg  statemodel.peg
class_model_dsl/input/: class-attribute.xmm  e8-lineage.xmm  ev1.xmm  ev2-assoc-class.xmm  ev2.xmm  ev5-nomethods.xmm  ev6-ordinal.xmm  mp1.xmm  mp2.xmm
class_model_dsl/metamodel/: action.xcm  activity.xcm  class-attribute.xcm  domain.xcm  ee.xcm  event.xcm  flow.xcm  form.xcm  mm_types.yaml  mmdb.txt  nav.xcm  rel.xcm  relational-action.xcm  select-action.xcm  state.xcm  type.xcm
class_model_dsl/mm-ref/: activity.xmm
class_model_dsl/parse/: method_parser.py  method_visitor.py  model_parser.py  model_visitor.py  op_parser.py  op_visitor.py  scrall_parser.py  scrall_visitor.py  statemodel_parser.py  statemodel_visitor.py
class_model_dsl/populate/: action.py  activity.py  attribute.py  attribute_reference.py  (+22 more)
docs/: readme-images.graffle
input/: elevator_pop.ral  ev4.xmm  ev7-superid.xmm  lin1.xmm  mp1.xmm
(+240 files in other folders)
