[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xuml-populate"
version = "1.0.4"
description = "Populate your modeled system into an Executable UML metamodel repository"
readme = "README.md"
authors = [{ name = "Leon Starr", email = "leon_starr@modelint.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["shlaer-mellor", "metamodel", "executable uml", "mbse", "xuml", "xtuml", "platform independent", "sysml"]
dependencies = ["pyyaml", "xcm-parser", "xsm-parser", "op-parser", "mtd-parser", "mi-pyral", "scrall", "xuml-metamodel>=1.0.0,<2.0.0"]
requires-python = ">=3.11,<3.14"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["bump2version", "pytest"]

[project.scripts]
popsystem = "xuml_populate.__main__:main"

[project.urls]
repository    = "https://github.com/modelint/xuml-populate"
documentation = "https://github.com/modelint/xuml-populate/wiki"
